# Recipe-Site-Traffic

./: .dockerignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api_dev/: Dockerfile  README.md  main.py  schemas.py
app/api_dev/tests/: conftest.py  test_app_e2e_playwright.py  test_main_api.py  test_schemas.py
app/fastapi_app/: Dockerfile  exam.py  main.py  schemas.py
app/web_app/: Dockerfile  README.md  flask_app.py  package-lock.json  package.json
app/web_app/public/: index.html
app/web_app/src/: App.css  App.js  index.css  index.js
app/web_app/templates/: index.html
data/: cleaned_data.csv
models/: tasty_model1  tasty_model2
src/: __init__.py  utils.py
src/model/: TastyBytesModel.py  __init__.py
v_env/: pyvenv.cfg
v_env/Scripts/: activate  activate.bat
virtualenv/: pyvenv.cfg
virtualenv/Scripts/: activate  activate.bat
