[project]
name = "recipe-site-traffic"
version = "0.1.0"
description = "Tasty Bytes - ML backend and tools for recipe traffic prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "flask==3.1.0",
    "joblib==1.3.2",
    "matplotlib>=3.10.8",
    "missingno==0.5.1",
    "numpy>=2.2.6",
    "optuna==3.6.1",
    "pandas>=2.3.3",
    "pydantic==2.11.3",
    "scikit-learn==1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "uvicorn==0.34.0",
]
