[project]
name = "recipe-site-traffic"
version = "0.1.0"
description = "Tasty Bytes - ML backend and tools for recipe traffic prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "flask==3.1.0",
    "httpx>=0.28.1",
    "joblib==1.3.2",
    "matplotlib>=3.10.8",
    "missingno==0.5.1",
    "numpy>=2.2.6",
    "optuna==3.6.1",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "pydantic==2.11.3",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "scikit-learn==1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "uvicorn==0.34.0",
]
